# my_ci_cd_demo

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/my_ci_cd_demo/: main.py
tests/: test_main.py
