[tool.poetry]
name = "my-ci-cd-demo"
version = "0.1.0"
description = ""
authors = ["Michael Fry <mfry1199@gmail.com>"]
readme = "README.md"
packages = [{include = "my_ci_cd_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
[tool.poetry.group.dev.dependencies]
mypy = ">=1.19.0,<2.0.0"
flake8 = ">=7.3.0,<8.0.0"
pytest = ">=9.0.2,<10.0.0"
pre-commit = ">=4.5.0,<5.0.0"
ruff = ">=0.14.8,<0.15.0"
